# photo-monorepo

./: .env.example  .gitignore  CONTINUATION-GUIDE.md  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.context/: CONTEXT-SAVE-SUMMARY.md  PHASE3-COMPLETION-SUMMARY.md  PHASE4-COMPLETION-SUMMARY.md  PROJECT-CONTEXT.md  QUICK-REFERENCE.md  README.md  project-context.json
.spec-workflow/specs/: ALL-PHASES-DESIGN-SUMMARY.md  IMPLEMENTATION-CHECKLIST.md  README.md
.spec-workflow/specs/phase-1-infrastructure/: design.md  requirements.md  tasks.md
.spec-workflow/specs/phase-2-authentication/: design.md  requirements.md  tasks.md
.spec-workflow/specs/phase-3-collection-code/: design.md  requirements.md  tasks.md
.spec-workflow/specs/phase-4-photo-upload/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
apps/admin/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/server/: .env.example  pyproject.toml
apps/server/app/: __init__.py  main.py
apps/server/app/api/: deps.py
apps/server/app/api/v1/: __init__.py  admin_collections.py  auth.py  collections.py  photos.py
apps/server/app/core/: config.py  database.py  security.py
apps/server/app/models/: __init__.py  collection.py  photo.py  user.py
apps/server/app/schemas/: __init__.py
apps/server/app/services/: image_service.py  photo_service.py  storage_service.py
apps/server/app/utils/: __init__.py  code_generator.py
apps/web/: index.html  package.json  vite.config.ts
(+34 files in other folders)
